--- a/Hello Triangle Application/Hello Triangle Application.vcxproj
+++ b/Hello Triangle Application/Hello Triangle Application.vcxproj
@@ -21,6 +21,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="compile.bat" />
+    <None Include="shader.frag" />
+    <None Include="shader.vert" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{aa1107dc-e329-414b-9559-9f9e5968e31c}</ProjectGuid>
